--- a/Tgr.tex
+++ b/Tgr.tex
@@ -162,4 +162,32 @@ hugsa varpanirnar rétt. Útskýrið þess vegna vel einstakar skipanir.
 
 \newpage
 
+\section{3.} Endurskinslíkön
+
+Hér fyrir neðan er líkan með áhorfanda, ljósgjafa og glansandi yfirborði.
+Áhorfandinn og ljósgjafinn eru í sömu hæð og beint fyrir ofan sitthvort brotið í
+yfirborðinu. Gerið ráð fyrir að notað sé endurskinslíkan Phong án dofnunar til að
+búa til lit á yfirborðið.
+
+\begin{center}
+\includegraphics[scale = 0.9]{Endurskin.png}
+\end{center}
+
+
+\subsubsection{a.}Hvar á yfirborðinu er bjartasta \underline{dreif}endurskin (diffuse reflection)? Ef fleiri en
+einn staður eru jafnbjartir tilgreinið þá alla björtustu staðina. Rökstyðjið
+svarið í nokkrum orðum.
+
+\subsubsection{b.}Hvar á yfirborðinu er bjartasta \underline{depil}endurskin (specular reflection)? Ef fleiri
+en einn staður eru jafnbjartir tilgreinið þá alla björtustu staðina. Rökstyðjið
+svarið í nokkrum orðum.
+
+\subsubsection{c.}Ef hægt væri að færa ljósið til hliðar (í sömu hæð), eru staðsetningar á ljósinu
+sem gefa ekkert depilendurskin á þessu yfirborði? Gerið ráð fyrir að
+glansstuðull yfirborðsins sér hár og depillinn sé því lítill. Rökstyðjið svarið.
+
+\subsubsection{d.}Ef ekkert \underline{umhverfis}endurskin (ambient reflection) væri í líkaninu, væri þá
+einhver hluti yfirborðsins alveg svartur? Rökstyðjið.
+
+
 \end{document}
