--- a/Tgr.tex
+++ b/Tgr.tex
@@ -162,7 +162,7 @@ hugsa varpanirnar rétt. Útskýrið þess vegna vel einstakar skipanir.
 
 \newpage
 
-\section{3.} Endurskinslíkön
+\subsection{3.} Endurskinslíkön
 
 Hér fyrir neðan er líkan með áhorfanda, ljósgjafa og glansandi yfirborði.
 Áhorfandinn og ljósgjafinn eru í sömu hæð og beint fyrir ofan sitthvort brotið í
@@ -188,6 +188,56 @@ glansstuðull yfirborðsins sér hár og depillinn sé því lítill. Rökstyðj
 
 \subsubsection{d.}Ef ekkert \underline{umhverfis}endurskin (ambient reflection) væri í líkaninu, væri þá
 einhver hluti yfirborðsins alveg svartur? Rökstyðjið.
+
+\newpage
+
+\subsection{4.} Ýmislegt efni
+
+Hér fyrir neðan eru stuttar spurningar úr ýmsu efni námskeiðsins. Svarið hverri
+spurningu með nokkrum setningum
+
+\subsubsection{a.}Berið saman Gouraud litun og Phong litun. Nefnið einn kost og einn galla
+við hvora aðferð.
+
+\subsubsection{b.}Er hægt að útfæra mynsturvörpun eingöngu í hnútalitara? Rökstyðjið svar
+ykkar.
+
+\subsubsection{c.}Skuggakort (shadow maps) eru ein leið til að fá skugga í WebGL. Lýsið
+stuttlega hvernig hún virkar og hvaða takmarkanir eru á aðferðinni.
+
+\subsubsection{d.}Útskýrið hvaða kosti það hefur að nota jafnþætt (homogeneous) hnit í
+tölvugrafík.
+
+\subsubsection{e.}Hvers vegna skiptir máli að röð hnúta í þríhyrningi sé rétt (þ.e. rangsælis eða
+réttsælis)? Rökstyðjið.
+
+\newpage
+
+\subsection{5.} Mynsturvörpun
+
+\subsubsection{a.}Spurningar um ójafnhliða síun (anisotropic filtering):
+
+\begin{itemize}
+    \item[i.]Hvers vegna er ójafnhliða síun betri en "trilinear" síun (þ.e. MIP vörpun
+    með \textbf{LINEAR-LINEAR} stillingu) á gólfi sem teygir sig langt frá áhorfanda?
+    Rökstyðjið.
+    \item[ii.]Eru einhver tilvik þar sem ójafnhliða síun gæfi verri útkomu en "trilinear"
+    síun? Rökstyðjið.
+\end{itemize}
+
+\subsubsection{b.}Hér fyrir neðan eru þrjár myndir af spjaldi þar sem búið er að
+varpa á það mynstrinu af tepottinum hér til hægri. Í hverju
+tilfelli gefið mynsturhnitin sem þarf að nota og tiltakið þær
+stillingar á mynsturvörpuninni sem skipta máli til að fá þessa
+útkomu.
+
+\includegraphics[scale = 0.9]{mynstur.png}
+
+\begin{center}
+\includegraphics[scale = 0.9]{mynstur2.png}
+\end{center}
+
+
 
 
 \end{document}
