--- a/Tgr.tex
+++ b/Tgr.tex
@@ -238,6 +238,22 @@ stillingar á mynsturvörpuninni sem skipta máli til að fá þessa
 \end{center}
 
 
+\newpage
 
+\subsection{6.} Bakhliðareyðing og litaraforritun
+
+\subsubsection{a.}Segjum að við litum margflötung (polytope) með endurskinslíkani Phong og
+Phong litun. Ef það er ljósgjafi fyrir aftan margflötunginn (frá áhorfanda) og
+ef bakhliðareyðing (back-face culling) \underline{er ekki virk}, hvernig lit fá þá bakhliðar
+margflötungsins (ef við sæjum inn í hann)? Rökstyðjið
+
+\subsubsection{b.}Hvernig breytist svar ykkar í a-lið ef bakhliðareyðing \underline{er virk}? Rökstyðjið.
+
+\subsubsection{c.}GLSL bútalitarar hafa innbyggðu breytuna \text{\textbf{gl\_FrontFacing}}. Þetta er
+breyta af taginu \underline{bool} sem er sönn ef núverandi bútur er hluti af þríhyrningi
+sem snýr að áhorfandanum, en ósönn annars. Skrifið GLSL kóðabút sem
+veldur því að allar bakhliðar sem sjást eru rauðar, en framhliðar væru litaðar
+eins og venjulega (þið þurfið ekki að skrifa út þann hluta kóðans!). Hvað
+myndi gerst í kóðanum ykkar ef bakhliðareyðing væri virk? Útskýrið.
 
 \end{document}
