--- a/Tgr.tex
+++ b/Tgr.tex
@@ -80,7 +80,7 @@
 \setcounter{secnumdepth}{-1} 
 \pagenumbering{gobble}
 
-\title{Tölvutækni og forritun Lokapróf}
+\title{Tölvugrafík Lokaprófa undirbúningur}
 \author{brj46 }
 \date{Nóvember 2024}
 
@@ -90,7 +90,7 @@
 
 \vspace {7em}
 \begin{center}
-\includegraphics[width=0.7\textwidth]{3d.jpg}
+\includegraphics[width=0.7\textwidth]{myndir/3d.jpg}
 \end{center}
 
 \newpage
@@ -113,12 +113,23 @@
 \subsection{Varpanir}
 \subsubsection{a.} Á myndinni er gefin upphafsstaða á húsi í tvívídd. Neðra vinstra horn þess er i (1, 2).
 
-\includegraphics[scale = 0.9]{mynd2023a.png}
+\includegraphics[scale = 0.9]{myndir/mynd2023a.png}
 
 Teiknið mynd af stöðu hússins eftir þessar samsettu varpanir (hvor liður sjálfstæður). Rökstyðjið í nokkrum orðum hver útkoman er.
 
 \begin{itemize}
     \item[i.] $T(1, 2)*S(1, 2)*T(2,-1)*R(90\degree)$
+
+
+    Alright skulum skoða
+
+
+
+
+
+
+
+
     \item[ii.] $T(1, 2)*R(90\degree)*S(1,2)*T(-1,-2)$
 \end{itemize}
 
@@ -127,7 +138,7 @@ ferhyrninginn í seinni myndinni. Seinni ferhyrningurinn er með miðpunkt (2,
 2), hliðarlengdir 1 og 2, og halli hans er $45\degree$. Rökstyðjið einstakar
 grunnvarpanir í samsettu vörpuninni.
 
-\includegraphics[scale = 0.9]{mynd2023b.png}
+\includegraphics[scale = 0.9]{myndir/mynd2023b.png}
 
 \newpage
 
@@ -146,7 +157,7 @@ klukkustundararmurinn á milli 4 og 5, mínútuarmurinn sýnir
 30 og sekúntuarmurinn vísar á 45. Klukkan hér er því
 4:30:45.
 
-\includegraphics[scale = 0.9]{klukka.png}
+\includegraphics[scale = 0.9]{myndir/klukka.png}
 
 Sýnið uppkast að render-falli sem teiknar þessa klukku. Hver armur á að vera
 teningur og þið getið gert ráð fyrir að sé búið að hlaða hnúta hans inn í
@@ -170,7 +181,7 @@ yfirborðinu. Gerið ráð fyrir að notað sé endurskinslíkan Phong án dofnu
 búa til lit á yfirborðið.
 
 \begin{center}
-\includegraphics[scale = 0.9]{Endurskin.png}
+\includegraphics[scale = 0.9]{myndir/Endurskin.png}
 \end{center}
 
 
@@ -231,10 +242,10 @@ tilfelli gefið mynsturhnitin sem þarf að nota og tiltakið þær
 stillingar á mynsturvörpuninni sem skipta máli til að fá þessa
 útkomu.
 
-\includegraphics[scale = 0.9]{mynstur.png}
+\includegraphics[scale = 0.9]{myndir/mynstur.png}
 
 \begin{center}
-\includegraphics[scale = 0.9]{mynstur2.png}
+\includegraphics[scale = 0.9]{myndir/mynstur2.png}
 \end{center}
 
 
