--- a/Tgr.tex
+++ b/Tgr.tex
@@ -120,8 +120,45 @@ Teiknið mynd af stöðu hússins eftir þessar samsettu varpanir (hvor liður s
 \begin{itemize}
     \item[i.] $T(1, 2)*S(1, 2)*T(2,-1)*R(90\degree)$
 
+    \item \textbf{Svar mitt} Alright skoðum hverja skipun fyrir sig (lesum frá hægri til vinstri) R($90\degree$) mun snúa húsinu um 90 gráður en frá 0.0 og snúið til vinstri svo næsta staða hússins væri
+    \item[2. $R(90\degree)$] 
+    \begin{tikzpicture}
+        \draw[->] (-4,0) -- (4,0) node[anchor=north west] {x};
+        \foreach \x in {-3, -2, -1, 0, 1, 2, 3}
+        \draw (\x, 0) -- (\x, -0.1) node[anchor=north] {\x};
+        
+        \draw[->] (0,-1) -- (0,5) node[anchor=south east] {y};
+        \foreach \y in {0, 1, 2, 3, 4} 
+        \draw (0, \y) -- (-0.1, \y) node[anchor=east] {\y};
+        
+        \draw[fill=gray!20] (-3, 1) rectangle (-2, 2);
 
-    Alright skulum skoða
+        \draw[fill=gray!40] (-3, 1) -- (-4, 1.5) -- (-3, 2) -- cycle; 
+        
+    \end{tikzpicture}
+
+    Næst er T(2,-1) þá munum við færa húsið 2 til hægri og 1 niður.
+
+    Svo er skölunin S(1, 2) sem mun skala húsið með 1 í x-ás og 2 í y-ás. semsagt tvöfaldast upp og viðheldur breiddinni.
+
+    Síðast er T(1, 2) sem færir húsið 1 til hægri og 2 upp.
+
+    að lokum höfum við
+    
+    \begin{tikzpicture}
+        \draw[->] (-4,0) -- (4,0) node[anchor=north west] {x};
+        \foreach \x in {-3, -2, -1, 0, 1, 2, 3}
+        \draw (\x, 0) -- (\x, -0.1) node[anchor=north] {\x};
+        
+        \draw[->] (0,-1) -- (0,5) node[anchor=south east] {y};
+        \foreach \y in {0, 1, 2, 3, 4} 
+        \draw (0, \y) -- (-0.1, \y) node[anchor=east] {\y};
+        
+        \draw[fill=gray!20] (-3, 1) rectangle (-2, 2);
+
+        \draw[fill=gray!40] (-3, 1) -- (-4, 1.5) -- (-3, 2) -- cycle; 
+        
+    \end{tikzpicture}
 
 
 
