--- a/Tgr.tex
+++ b/Tgr.tex
@@ -168,6 +168,35 @@ Teiknið mynd af stöðu hússins eftir þessar samsettu varpanir (hvor liður s
 
 
     \item[ii.] $T(1, 2)*R(90\degree)*S(1,2)*T(-1,-2)$
+
+    \item \textbf{Svar mitt} Jæja taka tvö ég hafði gert fyrra dæmið í heimdæmi svo ég var svoldið með það skulum gera þetta núna 
+
+    Sama dæmi byrjum á að lesa frá hægri til vinstri. 
+    
+    T(-1, -2) færir húsið 1 til vinstri og 2 niður.
+
+    S(1, 2) skalar húsið með 1 í x-ás og 2 í y-ás.
+
+    R($90\degree$) snýr húsinu um 90 gráður til vinstri muna það því mér þykir það weird að snúa húsinu til vinstri.
+
+    Síðast er T(1, 2) færir húsið 1 til hægri og 2 upp.
+
+    að lokum höfum við
+
+    \begin{tikzpicture}
+        \draw[->] (-4,0) -- (4,0) node[anchor=north west] {x};
+        \foreach \x in {-3, -2, -1, 0, 1, 2, 3}
+        \draw (\x, 0) -- (\x, -0.1) node[anchor=north] {\x};
+        
+        \draw[->] (0,-1) -- (0,5) node[anchor=south east] {y};
+        \foreach \y in {0, 1, 2, 3, 4} 
+        \draw (0, \y) -- (-0.1, \y) node[anchor=east] {\y};
+        
+        \draw[fill=gray!20] (1, 2) rectangle (2, 3);
+
+        \draw[fill=gray!40] (1,3) -- (1.5, 4) -- (2, 3) -- cycle; 
+        
+    \end{tikzpicture}
 \end{itemize}
 
 \subsubsection{b.} Sýnið samsetta tvívíða vörpun sem breytir ferningnum í fyrri myndinni yfir í
